--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,16 @@ structlog>=23.2.0          # Structured logging (better tracing)
 # --- NEAT Neuroevolution (Self-Evolution) ---
 neat-python>=0.92          # NEAT algorithm for evolving neural networks
 
+# --- v3.2: Unsurpassable Features ---
+pyserial>=3.5              # Hardware embodiment (Arduino/RPi serial)
+statsmodels>=0.14.0        # Predictive user modeling (ARIMA time-series)
+pandas>=2.0.0              # Data analysis for user predictor
+
+# --- Optional: LoRA Fine-Tuning ---
+# Uncomment for real LoRA fine-tuning (large download)
+# peft>=0.7.0              # Parameter-Efficient Fine-Tuning
+# litgpt>=0.3.0            # Lightweight GPT fine-tuning
+
 # --- Optional: LangGraph Multi-Agent ---
 # Uncomment for advanced multi-agent orchestration
 # langgraph>=0.0.20
